Removed Address.FormattedAddress property

--- a/Mvx.Geocoder.Touch/Mvx.Geocoder.Touch.csproj
+++ b/Mvx.Geocoder.Touch/Mvx.Geocoder.Touch.csproj
@@ -9,6 +9,8 @@
     <RootNamespace>Mvx.Geocoder.Touch</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>Mvx.Geocoder.Touch</AssemblyName>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
