--- a/nuspec/Mvx.Plugins.Geocoder.nuspec
+++ b/nuspec/Mvx.Plugins.Geocoder.nuspec
@@ -27,7 +27,11 @@
 		<!-- touch -->
 		<file src="../Mvx.Geocoder/bin/Release/Mvx.Geocoder.dll" target="lib/MonoTouch/Mvx.Geocoder.dll" />
 		<file src="../Mvx.Geocoder.Touch/bin/Release/Mvx.Geocoder.Touch.dll" target="lib/MonoTouch/Mvx.Geocoder.Touch.dll" />
-        <file src="TouchBootstrapContent/GeocoderPluginBootstrap.cs.pp" target="content/MonoTouch/Bootstrap/GeocoderPluginBootstrap.cs.pp" />
+		<file src="TouchBootstrapContent/GeocoderPluginBootstrap.cs.pp" target="content/MonoTouch/Bootstrap/GeocoderPluginBootstrap.cs.pp" />
 
+		<!-- phone -->
+		<file src="../Mvx.Geocoder/bin/Release/Mvx.Geocoder.dll" target="lib/wp8/Mvx.Geocoder.dll" />
+		<file src="../Mvx.Geocoder.WindowsPhone/bin/Release/Mvx.Geocoder.WindowsPhone.dll" target="lib/wp8/Mvx.Geocoder.WindowsPhone.dll" />
+		<file src="WindowsPhoneBootstrapContent/GeocoderPluginBootstrap.cs.pp" target="content/wp8/Bootstrap/GeocoderPluginBootstrap.cs.pp" />
 	</files>
 </package>
