--- a/Mvx.Geocoder/Mvx.Geocoder.csproj
+++ b/Mvx.Geocoder/Mvx.Geocoder.csproj
@@ -10,8 +10,6 @@
     <AssemblyName>Mvx.Geocoder</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile158</TargetFrameworkProfile>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,6 +34,7 @@
     <Compile Include="IGeocoder.cs" />
     <Compile Include="PluginLoader.cs" />
     <Compile Include="Address.cs" />
+    <Compile Include="Coordinates.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
