--- a/Mvx.Geocoder.WindowsPhone/Mvx.Geocoder.WindowsPhone.csproj
+++ b/Mvx.Geocoder.WindowsPhone/Mvx.Geocoder.WindowsPhone.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Mvx.Geocoder.WindowsPhone</RootNamespace>
-    <AssemblyName>MvxPlugins.Geocoder.WindowsPhone</AssemblyName>
+    <AssemblyName>Mvx.Geocoder.WindowsPhone</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
