--- a/Mvx.Geocoder.WindowsPhone/Mvx.Geocoder.WindowsPhone.csproj
+++ b/Mvx.Geocoder.WindowsPhone/Mvx.Geocoder.WindowsPhone.csproj
@@ -83,6 +83,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AsyncQueryExtension.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindowsPhoneGeocoder.cs" />
