--- a/Mvx.Geocoder.Droid/Mvx.Geocoder.Droid.csproj
+++ b/Mvx.Geocoder.Droid/Mvx.Geocoder.Droid.csproj
@@ -6,13 +6,13 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{62F3258C-1E53-4510-BF27-E3AA0D355F2E}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MvvmCross.HotTuna.Plugins.Geocoder.Droid</RootNamespace>
+    <RootNamespace>MvxPlugins.Geocoder.Droid</RootNamespace>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
-    <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <AssemblyName>MvvmCross.HotTuna.Plugins.Geocoder.Droid</AssemblyName>
+    <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
+    <AssemblyName>MvxPlugins.Geocoder.Droid</AssemblyName>
     <TargetFrameworkVersion>v4.4</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
