--- a/Mvx.Geocoder.Touch/Mvx.Geocoder.Touch.csproj
+++ b/Mvx.Geocoder.Touch/Mvx.Geocoder.Touch.csproj
@@ -6,9 +6,9 @@
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{9F0CEBBB-FD18-47DB-95EE-D87A5689F2D8}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MvvmCross.HotTuna.Plugins.Geocoder.Touch</RootNamespace>
+    <RootNamespace>MvxPlugins.Geocoder.Touch</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>MvvmCross.HotTuna.Plugins.Geocoder.Touch</AssemblyName>
+    <AssemblyName>MvxPlugins.Geocoder.Touch</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
