--- a/Mvx.Geocoder/Mvx.Geocoder.csproj
+++ b/Mvx.Geocoder/Mvx.Geocoder.csproj
@@ -6,8 +6,8 @@
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{8B2B460C-7F28-43C7-A017-A9C17A47FFDC}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MvvmCross.HotTuna.Plugins.Geocoder</RootNamespace>
-    <AssemblyName>MvvmCross.HotTuna.Plugins.Geocoder</AssemblyName>
+    <RootNamespace>MvxPlugins.Geocoder</RootNamespace>
+    <AssemblyName>MvxPlugins.Geocoder</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
   </PropertyGroup>
