--- a/Mvx.Geocoder.Sample.Core/packages.config
+++ b/Mvx.Geocoder.Sample.Core/packages.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MvvmCross" version="3.5.0" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
-  <package id="MvvmCross.HotTuna.CrossCore" version="3.5.0" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
-  <package id="MvvmCross.HotTuna.MvvmCrossLibraries" version="3.5.0" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
-  <package id="MvvmCross.HotTuna.StarterPack" version="3.5.0" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
-  <package id="MvvmCross.PortableSupport" version="3.5.0" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
+  <package id="MvvmCross.HotTuna.Binding" version="4.0.0-beta4" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="MvvmCross.HotTuna.CrossCore" version="4.0.0-beta4" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="MvvmCross.HotTuna.MvvmCrossLibraries" version="4.0.0-beta4" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
