--- a/nuspec/Mvx.Plugins.Geocoder.nuspec
+++ b/nuspec/Mvx.Plugins.Geocoder.nuspec
@@ -2,17 +2,17 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Mvx.Plugins.Geocoder</id>
-    <version>1.1.1</version>
+    <version>1.2.0-beta</version>
     <title>MvvmCross - Geocoder Plugin</title>
     <authors>SeeD-Seifer</authors>
     <owners>SeeD-Seifer</owners>
     <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
     <projectUrl>https://github.com/SeeD-Seifer/Mvx.Geocoder</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>This package contains the 'Geocoder' plugin for MvvmCross v3 - Hot Tuna.</description>
+    <description>This package contains the 'Geocoder' plugin for MvvmCross v4</description>
     <tags>mvvm mvvmcross xamarin monodroid monotouch wpf windows8 winrt netcore wp wpdev windowsphone</tags>
     <dependencies>
-      <dependency id="MvvmCross.HotTuna.CrossCore" version="3.5.0" />
+      <dependency id="MvvmCross.HotTuna.CrossCore" version="4.0.0-beta4" />
     </dependencies>
   </metadata>
   <files>
@@ -30,8 +30,10 @@
     <file src="TouchBootstrapContent/GeocoderPluginBootstrap.cs.pp" target="content/Xamarin.iOS10/Bootstrap/GeocoderPluginBootstrap.cs.pp" />
 
     <!-- phone -->
+    <!--
     <file src="../Mvx.Geocoder/bin/Release/MvxPlugins.Geocoder.dll" target="lib/wp8/MvxPlugins.Geocoder.dll" />
     <file src="../Mvx.Geocoder.WindowsPhone/bin/Release/MvxPlugins.Geocoder.WindowsPhone.dll" target="lib/wp8/MvxPlugins.Geocoder.WindowsPhone.dll" />
     <file src="BootstrapContent/GeocoderPluginBootstrap.cs.pp" target="content/wp8/Bootstrap/GeocoderPluginBootstrap.cs.pp" />
+    -->
   </files>
 </package>
