--- a/Mvx.Geocoder.Touch/packages.config
+++ b/Mvx.Geocoder.Touch/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MvvmCross.HotTuna.Binding" version="4.0.0-beta4" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="MvvmCross.HotTuna.CrossCore" version="4.0.0-beta4" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="MvvmCross.Core" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Platform" version="4.0.0" targetFramework="xamarinios10" />
 </packages>
