Change .Touch namespace to .iOS

--- a/Mvx.Geocoder.Touch/Mvx.Geocoder.iOS.csproj
+++ b/Mvx.Geocoder.Touch/Mvx.Geocoder.iOS.csproj
@@ -6,9 +6,9 @@
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{9F0CEBBB-FD18-47DB-95EE-D87A5689F2D8}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MvxPlugins.Geocoder.Touch</RootNamespace>
+    <RootNamespace>MvxPlugins.Geocoder.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>MvxPlugins.Geocoder.Touch</AssemblyName>
+    <AssemblyName>MvxPlugins.Geocoder.iOS</AssemblyName>
     <TargetFrameworkIdentifier>Xamarin.iOS</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v1.0</TargetFrameworkVersion>
   </PropertyGroup>
@@ -23,7 +23,6 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
