--- a/Mvx.Geocoder.Sample.Touch/Mvx.Geocoder.Sample.Touch.csproj
+++ b/Mvx.Geocoder.Sample.Touch/Mvx.Geocoder.Sample.Touch.csproj
@@ -147,13 +147,13 @@
       <Project>{8B2B460C-7F28-43C7-A017-A9C17A47FFDC}</Project>
       <Name>Mvx.Geocoder</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mvx.Geocoder.Touch\Mvx.Geocoder.Touch.csproj">
-      <Project>{9F0CEBBB-FD18-47DB-95EE-D87A5689F2D8}</Project>
-      <Name>Mvx.Geocoder.Touch</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Mvx.Geocoder.Sample.Core\Mvx.Geocoder.Sample.Core.csproj">
       <Project>{29E5FA89-93B0-430D-A6DD-5E1CD4C3A13D}</Project>
       <Name>Mvx.Geocoder.Sample.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mvx.Geocoder.Touch\Mvx.Geocoder.iOS.csproj">
+      <Project>{9F0CEBBB-FD18-47DB-95EE-D87A5689F2D8}</Project>
+      <Name>Mvx.Geocoder.iOS</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
