--- a/Mvx.Geocoder.Sample.Touch/packages.config
+++ b/Mvx.Geocoder.Sample.Touch/packages.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MvvmCross.Binding" version="4.0.0" targetFramework="xamarinios10" />
-  <package id="MvvmCross.Core" version="4.0.0" targetFramework="xamarinios10" />
-  <package id="MvvmCross.Platform" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="MvvmCross" version="6.3.1" targetFramework="xamarinios10" />
 </packages>
