--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+# Ignore Visual Studio config folder
+.vs/
 
 #ignore thumbnails created by windows
 Thumbs.db
+
 #Ignore files build by Visual Studio
 *.obj
 *.exe
