Update nuget spec (still used old-school approach)
We get an error while trying to build nugets from VS (on Mac and Win):
error MSB4044: The “FilterAssemblies” task was not given a value
for the required parameter “DesignTimeBuild”.

Decided to keep using nuspec and scripts to pack/push packages.
As soon as we can use VS - the scripts should be removed.

--- a/Mvx.Geocoder/Mvx.Geocoder.csproj
+++ b/Mvx.Geocoder/Mvx.Geocoder.csproj
@@ -41,15 +41,19 @@
 	<PropertyGroup>
 		<AssemblyName>Mvx.Geocoder</AssemblyName>
 		<RootNamespace>Mvx.Geocoder</RootNamespace>
-		<Description>This package contains the 'PhoneCall' plugin for MvvmCross
-		</Description>
 		<PackageId>Mvx.Geocoder</PackageId>
-		<PackageLicenseExpression>MS-PL</PackageLicenseExpression>
+		<Title>MvvmCross - Geocoder Plugin</Title>
+		<Description>This package contains the 'Geocoder' plugin for MvvmCross</Description>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/alexshikov/Mvx.Geocoder</PackageProjectUrl>
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/alexshikov/Mvx.Geocoder</RepositoryUrl>
-		<PackageTags>Geocoder;mvvmcross;mvx.geocoder</PackageTags>
+		<PackageTags>mvvmcross;mvx;geocoder;xamarin</PackageTags>
 		<NeutralLanguage>en</NeutralLanguage>
+		<Authors>Alexey Shikov, Anton Tereshko</Authors>
+		<Owners>Alexey Shikov</Owners>
+		<PackageVersion>2.0.0</PackageVersion>
+		<PackageReleaseNotes>Updated MvvmCross reference from 4.x to 6.3.1</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
