--- a/nuspec/Mvx.Plugins.Geocoder.nuspec
+++ b/nuspec/Mvx.Plugins.Geocoder.nuspec
@@ -2,32 +2,28 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Mvx.Plugins.Geocoder</id>
-    <version>1.2.1</version>
+    <version>2.0.0</version>
     <title>MvvmCross - Geocoder Plugin</title>
     <authors>SeeD-Seifer</authors>
     <owners>SeeD-Seifer</owners>
     <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
-    <projectUrl>https://github.com/SeeD-Seifer/Mvx.Geocoder</projectUrl>
+    <projectUrl>https://github.com/alexshikov/Mvx.Geocoder</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>This package contains the 'Geocoder' plugin for MvvmCross v4</description>
-    <tags>mvvm mvvmcross xamarin monodroid monotouch wpf windows8 winrt netcore wp wpdev windowsphone</tags>
+    <description>This package contains the 'Geocoder' plugin for MvvmCross v6</description>
+    <tags>mvvm mvvmcross mvx xamarin geocoder geocoding</tags>
     <dependencies>
-      <dependency id="MvvmCross.Core" version="4.0.0" />
+      <dependency id="MvvmCross.Core" version="6.3.1" />
     </dependencies>
   </metadata>
   <files>
-    <!-- PCL -->
-    <file src="../Mvx.Geocoder/bin/Release/MvxPlugins.Geocoder.dll" target="lib/portable-win+net45+wp8+win8+wpa81/MvxPlugins.Geocoder.dll" />
+    <!-- .NetStandard -->
+    <file src="..\Mvx.Geocoder\bin\Release\netstandard2.0\Mvx.Geocoder.dll" target="lib\netstandard2.0" />
 
-    <!-- droid -->
-    <file src="../Mvx.Geocoder/bin/Release/MvxPlugins.Geocoder.dll" target="lib/MonoAndroid/MvxPlugins.Geocoder.dll" />
-    <file src="../Mvx.Geocoder.Droid/bin/Release/MvxPlugins.Geocoder.Droid.dll" target="lib/MonoAndroid/MvxPlugins.Geocoder.Droid.dll" />
-    <file src="BootstrapContent/GeocoderPluginBootstrap.cs.pp" target="content/MonoAndroid/Bootstrap/GeocoderPluginBootstrap.cs.pp" />
+    <!-- Android -->
+    <file src="..\Mvx.Geocoder\bin\Release\monoandroid90\Mvx.Geocoder.dll" target="lib\MonoAndroid10" />
 
-    <!-- touch -->
-    <file src="../Mvx.Geocoder/bin/Release/MvxPlugins.Geocoder.dll" target="lib/Xamarin.iOS10/MvxPlugins.Geocoder.dll" />
-    <file src="../Mvx.Geocoder.Touch/bin/Release/MvxPlugins.Geocoder.iOS.dll" target="lib/Xamarin.iOS10/MvxPlugins.Geocoder.iOS.dll" />
-    <file src="TouchBootstrapContent/GeocoderPluginBootstrap.cs.pp" target="content/Xamarin.iOS10/Bootstrap/GeocoderPluginBootstrap.cs.pp" />
+    <!-- iOS -->
+    <file src="..\Mvx.Geocoder\bin\Release\xamarin.ios10\Mvx.Geocoder.dll" target="lib\Xamarin.iOS10" />
 
     <!-- phone -->
     <!--
